# hamster-pet

./: .gitignore  CLAUDE.md  feeding.html  index.html  package-lock.json  package.json  panel.html  reminder.html  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
docs/: ai-sprite-generation-prompts.md  art-prompts.md
docs/prompts/: 01-仓鼠帧动画.md  01a-仓鼠帧动画-基础状态.md  01b-仓鼠帧动画-互动冒险.md  02-明信片场景.md  03-装饰品图标.md  04-家具图标.md  05-装备图标.md  06-食物图标.md  README.md
scripts/: fix-running-band.mjs  keyout-background.mjs  prepare-icons.mjs  slice-assets.mjs  slice-pet-sheets.mjs  slice-spritesheet.mjs
src/: App.vue  FeedingApp.vue  PanelApp.vue  feeding-main.ts  panel-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity.rs  lib.rs  main.rs  tray.rs
src/components/: AboutPanel.vue  Card3DViewer.vue  ContextMenu.vue  FeedMenu.vue  HamsterSprite.vue  PomodoroNote.vue  PomodoroPanel.vue  PostcardGallery.vue  ReminderPanel.vue  SettingsPanel.vue  ShopWindow.vue  SouvenirShelf.vue  SpeechBubble.vue  StatusNote.vue  StatusPanel.vue  TimeRangePicker.vue  ToastNotification.vue  TypingGame.vue  WardrobePanel.vue  WeatherWidget.vue  speechDuration.ts
src/composables/: useActivityReaction.ts  useActivitySensor.ts  useAdventure.ts  useAlertUser.ts  useAppMode.ts  useAudio.ts  useBuff.ts  useChaseCursor.ts  useFeedingOverlay.ts  useHamster.ts  useInventory.ts  useMouseShakeDetector.ts  useNotepadSlide.ts  usePanelWindow.ts  usePomodoro.ts  usePushAnimation.ts  useReminder.ts  useSave.ts  useStatus.ts  useToast.ts  useTypingGame.ts  useWeather.ts  useWindowShake.ts
src/data/: activityPhrases.ts  decorations.ts  foods.ts  furniture.ts  hamsterPhrases.ts  icons.ts  locations.ts  pomodoroPhrases.ts  souvenirs.ts  typingWords.ts  weatherPhrases.ts
src/sprites/: image-frames.ts  image-renderer.ts  palette.ts  (+2 more)
(+46 files in other folders)
