[package]
name = "hamster-pet"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "hamster_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
